<resources>
    <string name="app_name">m14-retrofit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name">User Name</string>
    <string name="btn_txt_next">СЛЕДУЮЩИЙ</string>
    <string name="gender">Gender</string>
    <string name="nationatity">Nationatity</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="e_mail">E-mail</string>
    <string name="location">Location</string>
    <string name="default_name">User Name</string>
    <string name="registered">Registered</string>
    <string name="cell">Cell</string>
    <string name="phone">Phone</string>
    <string name="user_picture">User picture</string>
</resources>