<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".UserInfoFragment">

    <data>
        <import type="android.view.View"/>
        <import type="ru.gb.m14_retrofit.State"/>
        <variable
            name="viewModel"
            type="ru.gb.m14_retrofit.UserInfoViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="15dp"
        >

        <ImageView
            android:id="@+id/img_photo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/pngwing_com"
            android:contentDescription="@string/user_picture" />

        <TextView
            android:id="@+id/txt_name_dob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginVertical="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_photo"
            android:text="@{viewModel.userLiveData.nameComposite}"
            />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="380dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/txt_name_dob"
            >
            <LinearLayout
                android:id="@+id/info_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintTextAppearance="@style/HintStyle"
                    android:visibility="visible"
                    android:layout_marginBottom="8dp"

                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txt_gender"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:focusable="false"
                        android:hint="@string/gender"
                        android:inputType="none"
                        android:text="@{viewModel.userLiveData.gender}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintTextAppearance="@style/HintStyle"
                    android:visibility="visible"
                    android:layout_marginBottom="8dp"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txt_nat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:focusable="false"
                        android:hint="@string/nationatity"
                        android:inputType="none"
                        android:text="@{viewModel.userLiveData.nat}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintTextAppearance="@style/HintStyle"
                    android:visibility="visible"
                    android:layout_marginBottom="8dp"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txt_dob"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:focusable="false"
                        android:hint="@string/date_of_birth"
                        android:inputType="none"
                        android:text="@{viewModel.userLiveData.dobComposite}" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintTextAppearance="@style/HintStyle"
                    android:visibility="visible"
                    android:layout_marginBottom="8dp"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txt_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:focusable="false"
                        android:hint="@string/e_mail"
                        android:inputType="none"
                        android:text="@{viewModel.userLiveData.email}" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintTextAppearance="@style/HintStyle"
                    android:visibility="visible"
                    android:layout_marginBottom="8dp"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txt_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:focusable="false"
                        android:hint="@string/phone"
                        android:inputType="none"
                        android:text="@{viewModel.userLiveData.phone}" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintTextAppearance="@style/HintStyle"
                    android:visibility="visible"
                    android:layout_marginBottom="8dp"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txt_cell"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:focusable="false"
                        android:hint="@string/cell"
                        android:inputType="none"
                        android:text="@{viewModel.userLiveData.cell}" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintTextAppearance="@style/HintStyle"
                    android:visibility="visible"
                    android:layout_marginBottom="8dp"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txt_location"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:focusable="false"
                        android:hint="@string/location"
                        android:inputType="none"
                        android:text="@{viewModel.userLiveData.locationComposite}" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintTextAppearance="@style/HintStyle"
                    android:visibility="visible"
                    android:layout_marginBottom="8dp"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txt_regdate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:focusable="false"
                        android:hint="@string/registered"
                        android:inputType="none"
                        android:text="@{viewModel.userLiveData.registeredComposite}" />
                </com.google.android.material.textfield.TextInputLayout>



            </LinearLayout>
        </ScrollView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16sp"
            android:text="@string/btn_txt_next"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:onClick="@{() -> viewModel.loadUserInfo(context)}"
            android:enabled="@{viewModel.state.enable}"
            />

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/btn_next"
            app:layout_constraintBottom_toBottomOf="@id/btn_next"
            app:layout_constraintStart_toEndOf="@id/btn_next"
            android:indeterminate="true"
            android:visibility="@{viewModel.state.Loading ? View.VISIBLE : View.GONE}"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>